--- a/docs/Tutorials/1.utr-function-prediction.md
+++ b/docs/Tutorials/1.utr-function-prediction.md
@@ -1,5 +1,3 @@
-# UTR Function Prediction Tutorial
-
 ```python
 import sys
 sys.path.append('./')
@@ -11,6 +9,7 @@ import pandas as pd
 from sklearn import preprocessing
 import string
 from typing import Sequence, Tuple, List, Union
+from tqdm import tqdm
 import fm
 import torch
 from torch import nn
@@ -18,117 +17,56 @@ from torch import optim
 from torch.utils.data import DataLoader
 from torch.utils.data.sampler import RandomSampler
 import numpy as np
+import random
+
+def seed_torch(seed=0):
+    random.seed(seed)
+    os.environ['PYTHONHASHSEED'] = str(seed)
+    np.random.seed(seed)
+    torch.manual_seed(seed)
+    torch.cuda.manual_seed(seed)
+    torch.cuda.manual_seed_all(seed) # if you are using multi-GPU.
+    torch.backends.cudnn.benchmark = False
+    torch.backends.cudnn.deterministic = True
+
+seed_torch(2021)
 ```
 
 ## 1. Load Model
 
+### (1) define utr_function_predictor
+
 
 ```python
-class DownStreamModule(nn.Module):
-    """
-    base contact predictor for msa
-    """
-    def __init__(self, backbone_args, backbone_alphabet, depth_reduction="none",
-                 need_token=False, need_attention=[], need_embedding=[12], need_extrafeat=[]):
-        super().__init__()
-        self.backbone_args = backbone_args
-        self.backbone_alphabet = backbone_alphabet
-
-        self.prepend_bos = self.backbone_alphabet.prepend_bos
-        self.append_eos = self.backbone_alphabet.append_eos
-        self.bos_idx = self.backbone_alphabet.cls_idx
-        self.eos_idx = self.backbone_alphabet.eos_idx
-        if self.append_eos and self.eos_idx is None:
-            raise ValueError("Using an alphabet with eos token, but no eos token was passed in.")
-        self.pad_idx = self.backbone_alphabet.padding_idx
-
-        self.embed_dim = self.backbone_args.embed_dim
-        self.attention_heads = self.backbone_args.attention_heads
-
-        self.depth_reduction = depth_reduction
-        if self.depth_reduction == "attention":
-            self.msa_embed_dim_in = self.embed_dim
-            self.msa_embed_dim_out = self.embed_dim // self.attention_heads
-            self.msa_q_proj = nn.Linear(self.msa_embed_dim_in, self.msa_embed_dim_out)
-            self.msa_k_proj = nn.Linear(self.msa_embed_dim_in, self.msa_embed_dim_out)
-
-        self.input_type = {
-            "token": need_token,
-            "attention": need_attention,
-            "embedding": need_embedding,
-            "extra-feat": need_extrafeat,
-        }
-
-
-    def remove_pend_tokens_1d(self, tokens, seqs):
-        """
-        :param tokens:
-        :param seqs: must be shape of [B, ..., L, E]    # seq: [B, L, E]; msa: [B, D, L, E]
-        :return:
-        """
-        padding_masks = tokens.ne(self.pad_idx)
-
-        # remove eos token  （suffix first）
-        if self.append_eos:     # default is right
-            eos_masks = tokens.ne(self.eos_idx)
-            eos_pad_masks = (eos_masks & padding_masks).to(seqs)
-            seqs = seqs * eos_pad_masks.unsqueeze(-1)
-            seqs = seqs[:, ..., :-1, :]
-            padding_masks = padding_masks[:, ..., :-1]
-
-        # remove bos token
-        if self.prepend_bos:    # default is left
-            seqs = seqs[:, ..., 1:, :]
-            padding_masks = padding_masks[:, ..., 1:]
-
-        if not padding_masks.any():
-            padding_masks = None
-
-        return seqs, padding_masks
-
-    
-
-class Human5PrimeUTRPredictor(DownStreamModule): # (torch.nn.Module):
+class Human5PrimeUTRPredictor(torch.nn.Module):
     """
     contact predictor with inner product
     """
-    def __init__(self, backbone_args, backbone_alphabet, task="cls", arch="mlp",
-                 depth_reduction="mean", need_token=False, need_attention=[], need_embedding=[12],
-                 need_extrafeat=["ss-rnafm"]):
+    def __init__(self, task="rgs", arch="cnn", input_types=["seq", "emb-rnafm"]):
         """
         :param depth_reduction: mean, first
-        """
-        super().__init__(backbone_args, backbone_alphabet, depth_reduction, need_token, need_attention, need_embedding, need_extrafeat)
-        self.embed_dim_in = self.backbone_args.embed_dim
-        self.attention_heads = self.backbone_args.attention_heads
-
+        """       
+        super().__init__()        
         self.task = task
         self.arch = arch
-
+        self.input_types = input_types        
         self.padding_mode = "right" #"left"
-
         self.token_len = 100
-
         self.out_plane = 1
-
         self.in_channels = 0
-        if self.input_type["token"] == True:
+        if "seq" in self.input_types:
             self.in_channels = self.in_channels + 4
 
-        if self.input_type["embedding"] != []:
-            self.reductio_module = nn.Linear(640, 32)   #nn.Conv1d(640, 16, kernel_size=1)
-            self.in_channels = self.in_channels + 32  #640
+        if "emb-rnafm" in self.input_types:
+            self.reductio_module = nn.Linear(640, 32)
+            self.in_channels = self.in_channels + 32  
 
-        if self.arch == "mlp":
-            self.predictor = self.create_mlp(self.in_channels, out_labels=1)
-        elif self.arch == "cnn":
-            #self.predictor = self.create_cnn(in_channels=self.in_channels, in_token_len=self.token_len)
-            if self.in_channels > 0:
-                self.predictor = self.create_1dcnn_for_emd(in_planes=self.in_channels, out_planes=1)
+        if self.arch == "cnn":
+            self.predictor = self.create_1dcnn_for_emd(in_planes=self.in_channels, out_planes=1)
 
     def forward(self, tokens, inputs):
         ensemble_inputs = []
-        if "token" in inputs:
+        if "seq" in inputs:
             nest_token = (tokens[:, 1:-1] - 4)
 
             # 100 right padding
@@ -136,17 +74,14 @@ class Human5PrimeUTRPredictor(DownStreamModule): # (torch.nn.Module):
             token_padding_mask = nest_token.ge(0).long()
             one_hot_tokens = torch.nn.functional.one_hot((nest_token * token_padding_mask),
                                                          num_classes=4).float() * token_padding_mask.unsqueeze(-1)
-            # for 50 fixed length
-            # one_hot_tokens = torch.nn.functional.one_hot(nest_token, num_classes=4).float()
-
             if self.arch == "cnn":     # B, L, 4
                 one_hot_tokens = one_hot_tokens.permute(0, 2, 1)
             else:
                 one_hot_tokens = one_hot_tokens.view(one_hot_tokens.shape[0], -1)
             ensemble_inputs.append(one_hot_tokens)
 
-        if "embedding" in inputs:
-            embeddings = inputs["embedding"]
+        if "emb-rnafm" in inputs:
+            embeddings = inputs["emb-rnafm"]
             # remove auxiliary tokens
             embeddings, padding_masks = self.remove_pend_tokens_1d(tokens, embeddings)
             if len(embeddings.size()) == 3:  # for pure seq
@@ -160,20 +95,14 @@ class Human5PrimeUTRPredictor(DownStreamModule): # (torch.nn.Module):
 
             # 100 right padding
             embeddings = torch.nn.functional.pad(embeddings, (0, 0, 0, self.token_len - embeddings.shape[1]))
-
-            #embeddings = embeddings.permute(0, 2, 1)
             embeddings = self.reductio_module(embeddings)
-            #embeddings = embeddings.permute(0, 2, 1)
-
-            #embeddings = torch.mean(embeddings, dim=-1, keepdim=True)
 
             if self.arch == "cnn":
                 embeddings = embeddings.permute(0, 2, 1)
             else:
                 embeddings = embeddings.reshape(embeddings.shape[0], -1)
 
-            ensemble_inputs.append(embeddings)
-        
+            ensemble_inputs.append(embeddings)        
 
         if len(ensemble_inputs) > 0:
             ensemble_inputs = torch.cat(ensemble_inputs, dim=1)
@@ -196,80 +125,62 @@ class Human5PrimeUTRPredictor(DownStreamModule): # (torch.nn.Module):
             output = output.squeeze(-1)
         else:
             output = 0
-
-
         return output
-
-
-    def create_mlp(self, in_planes, out_labels=3, dropout=0.2,):
-        mlp = nn.Sequential(
-            nn.Flatten(),
-            nn.Linear(in_planes, 128),
-            nn.ReLU(inplace=True),
-            nn.BatchNorm1d(128),
-            nn.Dropout(dropout),
-            nn.Linear(128, 64),
-            nn.ReLU(inplace=True),
-            nn.BatchNorm1d(64),
-            nn.Dropout(dropout),
-            nn.Linear(64, 32),
-            nn.ReLU(inplace=True),
-            nn.BatchNorm1d(32),
-            nn.Dropout(dropout),
-            nn.Linear(32, out_labels),
-        )
-        return mlp
-
  
     def create_1dcnn_for_emd(self, in_planes, out_planes):
         main_planes = 64
-        dropout = 0.2 #0.2  # 0.2
+        dropout = 0.2
         emb_cnn = nn.Sequential(
             nn.Conv1d(in_planes, main_planes, kernel_size=3, padding=1),  ## 3
-            # 1 * 148 * 148 --> mp * 144 * 144   Receptive Field: 5, j=1
-            # nn.BatchNorm1d(main_planes),
-            # nn.ReLU(inplace=True),         # pre-activation mode in resblock
-            # nn.AvgPool1d(kernel_size=2, stride=2, padding=0),                          # mp * 144 * 144 --> mp * 72 * 72    Receptive Field: 6, j=2
-            # nn.MaxPool1d(kernel_size=2, stride=2),
-            # nn.Dropout(dropout),
-
             ResBlock(main_planes * 1, main_planes * 1, stride=2, dilation=1, conv_layer=nn.Conv1d,
-                     norm_layer=nn.BatchNorm1d),  # mp * 72 * 72  Receptive Field: +2*(3-1)*j= +8=14, j=2    ## 9  j=2
+                     norm_layer=nn.BatchNorm1d), 
             ResBlock(main_planes * 1, main_planes * 1, stride=1, dilation=1, conv_layer=nn.Conv1d,
-                     norm_layer=nn.BatchNorm1d),  # mp * 72 * 72  Receptive Field: +2*(3-1)*j= +8=22, j=2    ## 17  j=2
-            # nn.AvgPool1d(kernel_size=2, stride=2),                                                      # mp * 72 * 72 --> mp * 36 * 36  Receptive Field:           +1*2=24, j=4
-            # ResBlock(main_planes, main_planes*2, stride=2, dilation=1, conv_layer=nn.Conv1d, norm_layer=nn.BatchNorm1d),
-            # nn.MaxPool1d(kernel_size=2, stride=2),
-            # nn.Dropout(dropout),
-
+                     norm_layer=nn.BatchNorm1d),  
             ResBlock(main_planes * 1, main_planes * 1, stride=2, dilation=1, conv_layer=nn.Conv1d,
-                     norm_layer=nn.BatchNorm1d),  # mp * 36 * 36  Receptive Field: +2*(3-1)*j=+16=40, j=4    ## 29  j=4
+                     norm_layer=nn.BatchNorm1d), 
             ResBlock(main_planes * 1, main_planes * 1, stride=1, dilation=1, conv_layer=nn.Conv1d,
-                     norm_layer=nn.BatchNorm1d),  # mp * 36 * 36  Receptive Field: +2*(3-1)*j=+16=56, j=4    ## 45 j=4
-            # ResBlock(main_planes*4, main_planes*4, stride=1, dilation=1, conv_layer=nn.Conv1d, norm_layer=nn.BatchNorm1d),
-            # nn.AvgPool1d(kernel_size=2, stride=2),                                                      # mp * 36 * 36 --> mp * 18 * 18  Receptive Field:           +1*4=60, j=8
-            # ResBlock(main_planes*2, main_planes*4, stride=2, dilation=1, conv_layer=nn.Conv1d, norm_layer=nn.BatchNorm1d),
-            # nn.MaxPool1d(kernel_size=2, stride=2),
-            # nn.Dropout(dropout),
-
+                     norm_layer=nn.BatchNorm1d),  
             ResBlock(main_planes * 1, main_planes * 1, stride=2, dilation=1, conv_layer=nn.Conv1d,
-                     norm_layer=nn.BatchNorm1d),  # mp * 18 * 18  Receptive Field: +2*(3-1)*j=+32=92, j=8    ## 69 j=8
+                     norm_layer=nn.BatchNorm1d), 
             ResBlock(main_planes * 1, main_planes * 1, stride=1, dilation=1, conv_layer=nn.Conv1d,
-                     norm_layer=nn.BatchNorm1d),  # mp * 18 * 18  Receptive Field: +2*(3-1)*j=+32=124, j=8   ## 101 j=8
-            # ResBlock(main_planes*8, main_planes*8, stride=1, dilation=1, conv_layer=nn.Conv1d, norm_layer=nn.BatchNorm1d),  # mp * 18 * 18  Receptive Field: +2*(3-1)*j=+32=124, j=8
+                     norm_layer=nn.BatchNorm1d),       
             nn.AdaptiveAvgPool1d(1),
-            # AvgPool1d(kernel_size=2, stride=2),                                # mp * 18 * 18 --> mp * 9 * 9    Receptive Field:           +1*8=130, j=16
-
-            # nn.Conv1d(main_planes, 1, kernel_size=3, padding=0),                                        # mp * 9 * 9 --> 1 * 7 * 7       Receptive Field:   +(3-1)*j=+32=162, j=16
             nn.Flatten(),
             nn.Dropout(dropout),
-            # nn.Linear(main_planes, main_planes//2),
-            # nn.ReLU(inplace=True),
-            # nn.BatchNorm1d(main_planes//2),
             nn.Linear(main_planes * 1, out_planes),
         )
         return emb_cnn
+    
+    def remove_pend_tokens_1d(self, tokens, seqs):
+        """
+        :param tokens:
+        :param seqs: must be shape of [B, ..., L, E]    # seq: [B, L, E]; msa: [B, D, L, E]
+        :return:
+        """
+        self.pad_idx = 1
+        self.eos_idx = 2
+        self.append_eos = True
+        self.prepend_bos = True
+        
+        padding_masks = tokens.ne(self.pad_idx)
 
+        # remove eos token  （suffix first）
+        if self.append_eos:     # default is right
+            eos_masks = tokens.ne(self.eos_idx)
+            eos_pad_masks = (eos_masks & padding_masks).to(seqs)
+            seqs = seqs * eos_pad_masks.unsqueeze(-1)
+            seqs = seqs[:, ..., :-1, :]
+            padding_masks = padding_masks[:, ..., :-1]
+
+        # remove bos token
+        if self.prepend_bos:    # default is left
+            seqs = seqs[:, ..., 1:, :]
+            padding_masks = padding_masks[:, ..., 1:]
+
+        if not padding_masks.any():
+            padding_masks = None
+
+        return seqs, padding_masks
 
 class ResBlock(nn.Module):
     def __init__(
@@ -281,17 +192,15 @@ class ResBlock(nn.Module):
         conv_layer=nn.Conv2d,
         norm_layer=nn.BatchNorm2d,
     ):
-        super(ResBlock, self).__init__()
-        # Both self.conv1 and self.downsample layers downsample the input when stride != 1
+        super(ResBlock, self).__init__()        
         self.bn1 = norm_layer(in_planes)
         self.relu1 = nn.ReLU(inplace=True)
-        self.conv1 = conv_layer(in_planes, out_planes, kernel_size=3, stride=stride, padding=dilation, bias=False)
-        #self.dropout = nn.Dropout(p=0.3)    # without ok?
+        self.conv1 = conv_layer(in_planes, out_planes, kernel_size=3, stride=stride, padding=dilation, bias=False)       
         self.bn2 = norm_layer(out_planes)
         self.relu2 = nn.ReLU(inplace=True)
         self.conv2 = conv_layer(out_planes, out_planes, kernel_size=3, padding=dilation, bias=False)
 
-        if stride > 1 or out_planes != in_planes:   # main path should be have the same change with branch path for the final addition
+        if stride > 1 or out_planes != in_planes: 
             self.downsample = nn.Sequential(
                 conv_layer(in_planes, out_planes, kernel_size=1, stride=stride, bias=False),
                 norm_layer(out_planes),
@@ -306,8 +215,7 @@ class ResBlock(nn.Module):
 
         out = self.bn1(x)
         out = self.relu1(out)
-        out = self.conv1(out)
-        #out = self.dropout(out)
+        out = self.conv1(out)        
         out = self.bn2(out)
         out = self.relu2(out)
         out = self.conv2(out)
@@ -318,38 +226,141 @@ class ResBlock(nn.Module):
         out += identity
 
         return out
+    
+def weights_init(m):
+    classname = m.__class__.__name__
+    if classname.find('Linear') != -1:
+        nn.init.normal_(m.weight, std=0.001) #std=0.001)
+        if isinstance(m.bias, nn.Parameter):
+            nn.init.constant_(m.bias, 0.0)
+    elif classname.find('BasicConv') != -1: 
+        pass
+    elif classname.find('Conv') != -1:
+        nn.init.kaiming_normal_(m.weight, a=0, mode='fan_in')
+        if m.bias is not None:
+            nn.init.constant_(m.bias, 0.0)
+    elif classname.find('BatchNorm') != -1:
+        if m.affine:
+            nn.init.constant_(m.weight, 1.0)
+            nn.init.constant_(m.bias, 0.0)
 ```
+
+### (2) create RNA-FM backbone
 
 
 ```python
+device="cuda"   # "cpu"
+os.environ['CUDA_VISIBLE_DEVICES'] = "1"  
 backbone, alphabet = fm.pretrained.esm1b_rna_t12("../../redevelop/pretrained/RNA-FM_pretrained.pth")
+backbone.to(device)
+print("create RNA-FM_backbone sucessfully")
 ```
+
+    create RNA-FM_backbone sucessfully
+
+
+### (3) create UTR function downstream predictor
 
 
 ```python
 task="rgs"
 arch="cnn"
-input_items = ["seq", "emb-rnafm"]
-need_token, need_atten, need_embed, need_extra = False, [], [], []
-if "seq" in input_items:
-    need_token = True
-if "emb-rnafm" in input_items:
-    need_embed = [12]
-
+input_items = ["seq","emb-rnafm"]   # ["seq"], ["emb-rnafm"], ["seq","emb-rnafm"] 
+model_name = arch.upper() + "_" + "_".join(input_items) 
 utr_func_predictor = Human5PrimeUTRPredictor(
-    backbone.args, backbone_alphabet, task=task, arch=arch,
-    need_token=need_token, need_attention=need_atten, need_embedding=need_embed, need_extrafeat=need_extra,
+    task=task, arch=arch, input_types=input_items    
 )
+utr_func_predictor.apply(weights_init)
+utr_func_predictor.to(device)
+print("create utr_func_predictor sucessfully")
+print(utr_func_predictor)
+```
 
-criterion = nn.MSELoss()
+    create utr_func_predictor sucessfully
+    Human5PrimeUTRPredictor(
+      (reductio_module): Linear(in_features=640, out_features=32, bias=True)
+      (predictor): Sequential(
+        (0): Conv1d(36, 64, kernel_size=(3,), stride=(1,), padding=(1,))
+        (1): ResBlock(
+          (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu1): ReLU(inplace=True)
+          (conv1): Conv1d(64, 64, kernel_size=(3,), stride=(2,), padding=(1,), bias=False)
+          (bn2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu2): ReLU(inplace=True)
+          (conv2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+          (downsample): Sequential(
+            (0): Conv1d(64, 64, kernel_size=(1,), stride=(2,), bias=False)
+            (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          )
+        )
+        (2): ResBlock(
+          (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu1): ReLU(inplace=True)
+          (conv1): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+          (bn2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu2): ReLU(inplace=True)
+          (conv2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+        )
+        (3): ResBlock(
+          (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu1): ReLU(inplace=True)
+          (conv1): Conv1d(64, 64, kernel_size=(3,), stride=(2,), padding=(1,), bias=False)
+          (bn2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu2): ReLU(inplace=True)
+          (conv2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+          (downsample): Sequential(
+            (0): Conv1d(64, 64, kernel_size=(1,), stride=(2,), bias=False)
+            (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          )
+        )
+        (4): ResBlock(
+          (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu1): ReLU(inplace=True)
+          (conv1): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+          (bn2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu2): ReLU(inplace=True)
+          (conv2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+        )
+        (5): ResBlock(
+          (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu1): ReLU(inplace=True)
+          (conv1): Conv1d(64, 64, kernel_size=(3,), stride=(2,), padding=(1,), bias=False)
+          (bn2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu2): ReLU(inplace=True)
+          (conv2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+          (downsample): Sequential(
+            (0): Conv1d(64, 64, kernel_size=(1,), stride=(2,), bias=False)
+            (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          )
+        )
+        (6): ResBlock(
+          (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu1): ReLU(inplace=True)
+          (conv1): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+          (bn2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)
+          (relu2): ReLU(inplace=True)
+          (conv2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,), bias=False)
+        )
+        (7): AdaptiveAvgPool1d(output_size=1)
+        (8): Flatten(start_dim=1, end_dim=-1)
+        (9): Dropout(p=0.2, inplace=False)
+        (10): Linear(in_features=64, out_features=1, bias=True)
+      )
+    )
 
+
+### (4) define loss function and optimizer
+
+
+```python
+criterion = nn.MSELoss(reduction="none")
 optimizer = optim.Adam(utr_func_predictor.parameters(), lr=0.001)
 ```
 
 ## 2. Load Data
 You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing and place it in the tutorials/utr-function-prediction
 
-### Pre-define data processing classes
+### (1) define utr dataset
 
 
 ```python
@@ -373,39 +384,19 @@ class Human_5Prime_UTR_VarLength(object):
             self.input_items.append("seq")  # for generate RNA-FM embedding
         self.label_items = label_items
         self.data_items = input_items + label_items  # combine two items
-
     
         # 1. Create Paths
-        self.src_scv_path = os.path.join(self.root, "data", "GSM4084997_varying_length_25to100.csv")        
-
-
+        self.src_scv_path = os.path.join(self.root, "data", "GSM4084997_varying_length_25to100.csv") 
+        
         # 2. Create Data INFO        
         self.data_avatars, self.stats = self.__dataset_info(self.src_scv_path, self.data_items)
-
-        #self.classes = {'ON': ["0", "1"], 'OFF': ["0", "1"], 'ON/OFF': ["0", "1"]}
         self.labels = ['rl']
 
-        # 3. Create Data Reader and Batch Converter
-        self.data_reader = DataReader(self.theme)
-
-
     def __getitem__(self, index):
-        try:
-            input, label = self.cache[index]
-        except:
-            input = {}
-            if "seq" in self.input_items:
-                input["seq"] = (self.data_avatars["name"][index], self.data_avatars["seq"][index][0].replace("T", "U"))
-
-            if "ss-rnafm" in self.input_items:
-                input["ss-rnafm"] = self.generate_ss_embedding(
-                    self.data_reader.read_embedding(self.data_avatars["ss-rnafm"][index]),
-                    self.data_avatars["seq"][index][0].replace("T", "U"))
-            label = {"rl": self.data_avatars["rl"][index],}
-            if self.use_cache == 1:
-                self.cache[index] = (input, label)
-
-        return input, label
+        inputs = {}
+        inputs["seq"] = (self.data_avatars["name"][index], self.data_avatars["seq"][index][0].replace("T", "U"))
+        labels = {"rl": self.data_avatars["rl"][index],}
+        return inputs, labels
 
     def __len__(self):
         return self.stats.shape[0]
@@ -489,36 +480,11 @@ class Human_5Prime_UTR_VarLength(object):
                 raise Exception("Unknown data item name {}".format(itemname))
 
 
-        print("{} Dataset Info:".format(self.set_name))
-        print("Length-Frequency Table")
-        print(set_df["len"].describe())  # value_counts())
-
+        print("{} Dataset Num Samples: {} ".format(self.set_name, set_df["len"].shape[0]))
+        #print("Length-Frequency Table")
+        #print(set_df["len"].describe())  # value_counts())
         return data_paths, set_df
     
-class DataReader(object):
-    def __init__(self, theme):
-        """
-        :param theme: "protein", "rna", "dna"
-        :param data_type: "seq", "msa", "cov", "seq+msa", "seq+cov"   # input is controled
-        :param msa_nseq: Reads the first nseq sequences from an MSA file if it is in "msa" data type.
-        Notes:
-        1.cache
-        actually we should use dict for the data.
-        data ->
-        """
-        # This is an efficient way to delete lowercase characters and insertion characters from a string
-        deletekeys = dict.fromkeys(string.ascii_lowercase)
-        deletekeys["."] = None
-        deletekeys["*"] = None
-        self.translation = str.maketrans(deletekeys)
-        self.theme = theme        
-
-
-    def read_embedding(self, emb_path):
-        #pre, ext = os.path.splitext(emb_path)
-        #if ext == ".npy":
-        embedding = np.load(emb_path)
-        return embedding
     
 class BatchConverter(object):
     """
@@ -653,7 +619,7 @@ def build_collate_fn(alphabet, data_type):
 
 ```
 
-### Data processing
+### (2) generate dataloaders
 
 
 ```python
@@ -667,22 +633,23 @@ collate_fn = build_collate_fn(alphabet, train_set.data_type)
 num_workers = 4
 train_batch_size = 64
 train_loader = DataLoader(
-    train_set, batch_size=train_batch_size, sampler=RandomSampler(train_set, replacement=False),
+    train_set, batch_size=train_batch_size, #sampler=RandomSampler(train_set, replacement=False),
     num_workers=num_workers, collate_fn=collate_fn, drop_last=False
 )
 
-val_batch_size = train_batch_size * 4
+val_batch_size = train_batch_size #* 4
 val_loader = DataLoader(
-    val_set, batch_size=val_batch_size, sampler=RandomSampler(val_set, replacement=False),
+    val_set, batch_size=val_batch_size, #sampler=RandomSampler(val_set, replacement=False),
     num_workers=num_workers, collate_fn=collate_fn, drop_last=False
 )
 
-test_batch_size = train_batch_size * 4
+test_batch_size = train_batch_size #* 4
 test_loader = DataLoader(
-    test_set, batch_size=test_batch_size, sampler=RandomSampler(test_set, replacement=False),
+    test_set, batch_size=test_batch_size, #sampler=RandomSampler(test_set, replacement=False),
     num_workers=num_workers, collate_fn=collate_fn, drop_last=False
 )
 
+scaler = train_set.scaler
 ```
 
     /user/liyu/miniconda3/envs/jychen/lib/python3.8/site-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: 
@@ -692,13 +659,7 @@ test_loader = DataLoader(
       return func(*args, **kwargs)
 
 
-    train Dataset Info:
-    Length-Frequency Table
-    count     76319
-    unique       76
-    top          25
-    freq       1058
-    Name: len, dtype: int64
+    train Dataset Num Samples: 76319 
 
 
     /user/liyu/miniconda3/envs/jychen/lib/python3.8/site-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: 
@@ -708,13 +669,7 @@ test_loader = DataLoader(
       return func(*args, **kwargs)
 
 
-    valid Dataset Info:
-    Length-Frequency Table
-    count     7600
-    unique      76
-    top         25
-    freq       100
-    Name: len, dtype: int64
+    valid Dataset Num Samples: 7600 
 
 
     /user/liyu/miniconda3/envs/jychen/lib/python3.8/site-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: 
@@ -724,68 +679,110 @@ test_loader = DataLoader(
       return func(*args, **kwargs)
 
 
-    test Dataset Info:
-    Length-Frequency Table
-    count     7600
-    unique      76
-    top         25
-    freq       100
-    Name: len, dtype: int64
+    test Dataset Num Samples: 7600 
 
 
 ## 3. Training Model
 
+### (1) define eval function
+
+
+```python
+def model_eval(data_loader, i_epoch, set_name="unknown"):
+    all_losses = []
+    #pbar = tqdm(data_loader, desc="Epoch {}, {} Set - real MSE: {}".format(i_epoch,set_name, "NaN"), ncols=100)
+    #for index, (data, anns) in enumerate(pbar):
+    for index, (data, anns) in enumerate(data_loader):
+        backbone.eval()
+        utr_func_predictor.eval()
+        with torch.no_grad():
+            x = data["token"].to(device)
+            true_rl = anns["rl"].to(device)            
+            inputs = {}
+            results = {}
+            if "seq" in input_items:
+                inputs["seq"] = x         
+            if "emb-rnafm" in input_items:
+                results = backbone(x, need_head_weights=False, repr_layers=[12], return_contacts=False)
+                inputs["emb-rnafm"] = results["representations"][12]    
+            results["rl"] = utr_func_predictor(x, inputs)
+            #pds = scaler.inverse_transform(results["rl"].detach().cpu().numpy())
+            #gts = scaler.inverse_transform(true_rl.detach().cpu().numpy())
+            #pds = torch.Tensor(pds)
+            #gts = torch.Tensor(gts)            
+        
+            #losses = criterion(pds, gts)  
+            losses = criterion(results["rl"], true_rl)  
+            all_losses.append(losses.detach().cpu())     
+
+    avg_loss = torch.cat(all_losses, dim=0).mean()
+    print("Epoch {}, Evaluation on {} Set - MSE loss: {:.3f}".format(i_epoch, set_name, avg_loss))
+    
+    return avg_loss
+```
+
+### (2) training process
+
 
 ```python
 n_epoches = 50
-for i_e in range(n_epoches):
-    all_loss = 0
-    n_sample = 0
-    iters = len(train_loader)
+best_mse = 10
+best_epoch = 0
 
-    for index, (data, anns) in enumerate(train_loader):
-        #print(data)
-        #print(anns)
-        x = data["token"]
-        results = backbone(x, need_head_weights=False, repr_layers=[12], return_contacts=False)
-    
-        #print(results)
-        if "seq" in input_items and "emb-rnafm" in  input_items:
-            input = {"token":x, "embedding": results["representations"][12]}
-            results["rl"] = utr_func_predictor(x, input)
-        #print(results["rl"])
-    
-        loss = criterion(results["rl"], anns["rl"])
-        #print(loss)
-        loss.backward()
+for i_e in range(1, n_epoches+1):
+    all_losses = []
+    n_sample = 0
+    n_iter = len(train_loader)
+
+    pbar = tqdm(train_loader, desc="Epoch {}, Train Set - MSE loss: {}".format(i_e, "NaN"), ncols=100)
+    for index, (data, anns) in enumerate(pbar):
+        backbone.eval()
+        utr_func_predictor.train()
+        x = data["token"].to(device)
+        true_rl = anns["rl"].to(device)        
+        
+        inputs = {}
+        results = {}
+        if "seq" in input_items:
+            inputs["seq"] = x         
+        if "emb-rnafm" in  input_items:            
+            with torch.no_grad():
+                results = backbone(x, need_head_weights=False, repr_layers=[12], return_contacts=False)            
+            inputs["emb-rnafm"] = results["representations"][12]                
+        results["rl"] = utr_func_predictor(x, inputs)
+        losses = criterion(results["rl"], true_rl)
+        batch_loss = losses.mean()
+        batch_loss.backward()
         optimizer.step()
         optimizer.zero_grad()
     
-        all_loss = all_loss + loss.item() * train_batch_size
-        n_sample = n_sample + x.shape[0]
-        if index % 1 == 0:
-            print("epoch: {}, iter:{}/{} MSE loss: {}".format(i_e, index, iters, all_loss/n_sample ))
+        all_losses.append(losses.detach().cpu())
+        current_avg_loss = torch.cat(all_losses, dim=0).mean()
+        
+        pbar.set_description("Epoch {}, Train Set - MSE loss: {:.3f}".format(i_e, current_avg_loss))
+        #if index % 1 == 0:
+        #    print("epoch: {}, iter:{}/{} MSE loss: {}".format(i_e, index+1, iters, all_loss/n_sample ))
     
-        #break
-        if index > 10:
-            break
-    #break
+        #if index+1 > 10:
+        #    break    
+    
+    random_mse = model_eval(val_loader, i_e, set_name="Random")
+    
+    if random_mse < best_mse:
+        best_epoch = i_e
+        best_mse = random_mse
+        torch.save(utr_func_predictor.state_dict(), "result/{}_best_utr_predictor.pth".format(model_name))
+    print("--------- Model: {}, Best Epoch {}, Best MSE {:.3f}".format(model_name, best_epoch, best_mse))
 ```
 
-    epoch: 0, iter:0/1193 MSE loss: 0.9327887892723083
-    epoch: 0, iter:1/1193 MSE loss: 0.9804719388484955
-    epoch: 0, iter:2/1193 MSE loss: 0.9188532630602518
-    epoch: 0, iter:3/1193 MSE loss: 1.0563729256391525
-    epoch: 0, iter:4/1193 MSE loss: 1.067462933063507
-    epoch: 0, iter:5/1193 MSE loss: 1.0521654784679413
-    epoch: 0, iter:6/1193 MSE loss: 1.0582632252148219
-    epoch: 0, iter:7/1193 MSE loss: 1.0355761870741844
-    epoch: 0, iter:8/1193 MSE loss: 1.060308833916982
-    epoch: 0, iter:9/1193 MSE loss: 1.0794333279132844
-    epoch: 0, iter:10/1193 MSE loss: 1.0754052888263355
-    epoch: 0, iter:11/1193 MSE loss: 1.0797414431969325
-    ...
+    Epoch 1, Train Set - MSE loss: 0.531: 100%|█████████████████████| 1193/1193 [02:57<00:00,  6.72it/s]
 
+
+    Epoch 1, Evaluation on Random Set - MSE loss: 0.467
+    --------- Model: CNN_seq_emb-rnafm, Best Epoch 1, Best MSE 0.467
+
+
+    Epoch 2, Train Set - MSE loss: 0.231:  19%|████▏                 | 224/1193 [00:21<01:47,  9.03it/s]
 
 
 ```python
