--- a/docs/Tutorials/1.utr-function-prediction.md
+++ b/docs/Tutorials/1.utr-function-prediction.md
@@ -1,24 +1,16 @@
 ```python
 import sys
-sys.path.append('./')
-sys.path.append('../')
-sys.path.append('../..')
-
 import os
 import pandas as pd
 from sklearn import preprocessing
-import string
-from typing import Sequence, Tuple, List, Union
 from tqdm import tqdm
 import fm
 import torch
 from torch import nn
 from torch import optim
 from torch.utils.data import DataLoader
-from torch.utils.data.sampler import RandomSampler
 import numpy as np
 import random
-import pdb
 
 def seed_torch(seed=0):
     random.seed(seed)
@@ -205,7 +197,7 @@ def weights_init(m):
 ```python
 device="cuda"   # "cpu"
 os.environ['CUDA_VISIBLE_DEVICES'] = "0"  
-backbone, alphabet = fm.pretrained.esm1b_rna_t12("../../redevelop/pretrained/RNA-FM_pretrained.pth")
+backbone, alphabet = fm.pretrained.rna_fm_t12()
 backbone.to(device)
 print("create RNA-FM_backbone sucessfully")
 ```
@@ -312,7 +304,7 @@ optimizer = optim.Adam(utr_func_predictor.parameters(), lr=0.001)
 ```
 
 ## 2. Load Data
-You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing and place it in the tutorials/utr-function-prediction
+You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing or https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv, and place it in the tutorials/utr-function-prediction/data. You can also use `wget https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv -O data/GSM4084997_varying_length_25to100.csv`
 
 ### (1) define utr dataset
 
@@ -574,9 +566,4 @@ for i_e in range(1, n_epoches+1):
     --------- Model: CNN_emb-rnafm, Best Epoch 3, Best MSE 0.262
 
 
-    Epoch 4, Train Set - MSE loss: 0.304:  31%|██████▊               | 371/1193 [01:04<02:23,  5.74it/s]
-
-
-```python
-
-```
+    Epoch 4, Train Set - MSE loss: 0.305:  23%|█████                 | 274/1193 [00:47<02:37,  5.82it/s]
