--- a/tutorials/utr-function-prediction/UTR-Function-Prediction.ipynb
+++ b/tutorials/utr-function-prediction/UTR-Function-Prediction.ipynb
@@ -8,25 +8,17 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('./')\n",
-    "sys.path.append('../')\n",
-    "sys.path.append('../..')\n",
-    "\n",
     "import os\n",
     "import pandas as pd\n",
     "from sklearn import preprocessing\n",
-    "import string\n",
-    "from typing import Sequence, Tuple, List, Union\n",
     "from tqdm import tqdm\n",
     "import fm\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch import optim\n",
     "from torch.utils.data import DataLoader\n",
-    "from torch.utils.data.sampler import RandomSampler\n",
     "import numpy as np\n",
     "import random\n",
-    "import pdb\n",
     "\n",
     "def seed_torch(seed=0):\n",
     "    random.seed(seed)\n",
@@ -249,7 +241,7 @@
    "source": [
     "device=\"cuda\"   # \"cpu\"\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = \"0\"  \n",
-    "backbone, alphabet = fm.pretrained.esm1b_rna_t12(\"../../redevelop/pretrained/RNA-FM_pretrained.pth\")\n",
+    "backbone, alphabet = fm.pretrained.rna_fm_t12()\n",
     "backbone.to(device)\n",
     "print(\"create RNA-FM_backbone sucessfully\")"
    ]
@@ -385,7 +377,7 @@
    "metadata": {},
    "source": [
     "## 2. Load Data\n",
-    "You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing and place it in the tutorials/utr-function-prediction"
+    "You should download data from gdrive link: https://drive.google.com/file/d/10zCfOHOaOa__J2AIuZyidZ9sVJ9L11rI/view?usp=sharing or https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv, and place it in the tutorials/utr-function-prediction/data. You can also use `wget https://proj.cse.cuhk.edu.hk/rnafm/api/download?filename=GSM4084997_varying_length_25to100.csv -O data/GSM4084997_varying_length_25to100.csv`"
    ]
   },
   {
@@ -734,14 +726,6 @@
     "        torch.save(utr_func_predictor.state_dict(), \"result/{}_best_utr_predictor.pth\".format(model_name))\n",
     "    print(\"--------- Model: {}, Best Epoch {}, Best MSE {:.3f}\".format(model_name, best_epoch, best_mse))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d920d2ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
